# mixseek-quant-insight-plus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.specify/memory/: constitution.md
docs/: api-reference.md  conf.py  configuration-reference.md  data-specification.md  execution-guide.md  getting-started.md  glossary.md  index.md  system-flow.md  troubleshooting.md  user-guide.md
examples/: .env.example  README.md  setup.sh
examples/configs/: judgment.toml  orchestrator.toml
examples/configs/agents/members/: submission_creator_claudecode.toml  train_analyzer_claudecode.toml
examples/configs/agents/teams/: claudecode_team.toml
examples/configs/presets/: claudecode.toml
specs/001-fs-code-execution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fs-code-execution/checklists/: requirements.md
specs/001-fs-code-execution/contracts/: agent_changes.md  output_models.md  submission_relay.md
src/quant_insight_plus/: __init__.py  cli.py  submission_relay.py
src/quant_insight_plus/agents/: __init__.py  agent.py  output_models.py
src/quant_insight_plus/templates/: competition.toml  evaluator.toml  orchestrator.toml
src/quant_insight_plus/templates/agents/members/: submission_creator_claudecode.toml  train_analyzer_claudecode.toml
src/quant_insight_plus/templates/agents/teams/: claudecode_team.toml
tests/: conftest.py  test_agent.py  test_cli.py  test_enrich_scripts.py  test_enrich_workspace.py  test_execute_output_format.py  test_leader_template.py  test_member_prompt_constraints.py  test_output_models.py  test_presets.py  test_setup.py  test_structured_output_max_turns.py  test_submission_relay.py
workspaces/jquants/configs/agents/teams/: claudecode_team.toml
